--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "react": "^16.4.1",
+    "react-art": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-native-web": "^0.8.8",
     "react-router-dom": "^4.3.1"
@@ -33,6 +34,7 @@
     "compression-webpack-plugin": "^1.1.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "eslint-plugin-import": "^2.13.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.4.1",
     "rimraf": "^2.6.2",
