--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
     "react-native-web": "^0.8.8"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.2.6",
     "babel-jest": "^23.4.0",
-    "babel-loader": "^7.1.5",
+    "babel-loader": "^8.0.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-react-native-web": "^0.8.8",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
     "compression-webpack-plugin": "^1.1.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
