--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "test:dev": "yarn test --watch --coverage"
   },
   "dependencies": {
-    "react": "^16.4.1",
-    "react-art": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-native-web": "^0.8.8"
+    "react": "16.5.1",
+    "react-art": "16.5.1",
+    "react-dom": "16.5.1",
+    "react-native-web": "^0.9.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
