--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "webpack-dev-server": "webpack-dev-server",
     "clean": "rimraf dist",
     "dev": "yarn clean && yarn webpack-dev-server --env.mode development --hot",
+    "dev:ts": "yarn dev --env.presets typescript",
     "flow": "flow",
     "prod": "yarn clean && yarn webpack --env.mode production",
     "prod:analyze": "yarn prod --env.presets analyze",
@@ -16,9 +17,11 @@
     "test:dev": "yarn test --watch --coverage"
   },
   "dependencies": {
-    "react": "16.5.1",
+    "@types/react": "^16.7.18",
+    "@types/react-dom": "^16.0.11",
+    "react": "^16.7.0",
     "react-art": "16.5.1",
-    "react-dom": "16.5.1",
+    "react-dom": "^16.7.0",
     "react-native-web": "^0.9.6"
   },
   "devDependencies": {
@@ -47,6 +50,8 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.4.1",
     "rimraf": "^2.6.2",
+    "ts-loader": "^5.3.2",
+    "typescript": "^3.2.2",
     "webpack": "^4.16.0",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.0.8",
