--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   "dependencies": {
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
-    "react": "^16.7.0",
+    "react": "16.7.0",
     "react-art": "16.5.1",
-    "react-dom": "^16.7.0",
-    "react-native-web": "^0.9.6"
+    "react-dom": "16.7.0",
+    "react-native-web": "0.11.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
