--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   "dependencies": {
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
-    "react": "^16.8.6",
-    "react-art": "16.5.1",
-    "react-dom": "^16.8.6",
-    "react-native-web": "^0.11.5"
+    "react": "^16.13.1",
+    "react-art": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-native-web": "^0.12.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
